fix overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 @import url("fonts.css");
 html,
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
